# Sanktsionki.net

./: README.md
Sanktsionki_project_2026-05-19/: pyproject.toml  queries.json  requirements.txt  tests_analyticss.py
Sanktsionki_project_2026-05-19/data/input/buyer_chats/: sample_buyers_chat.json
Sanktsionki_project_2026-05-19/data/processed/: best_offers.csv  buyer_chat_messagess.csv  buyer_chats_summary.csv  market_summary.csv  offers_history.csv
Sanktsionki_project_2026-05-19/data/raw/: avito.csv  cdek_shopping.csv  lamoda.csv  sneakerhead.csv
Sanktsionki_project_2026-05-19/docs/: presentation_outline.md  research_findings.md
Sanktsionki_project_2026-05-19/scripts/: analyze_buyer_chats.py  collect_offers.py  export_google_sheets.py  run_dashboard.py
Sanktsionki_project_2026-05-19/src/sanktsionki/: __initt__.py  clii.py  configg.py  modelss.py  utilss.py
Sanktsionki_project_2026-05-19/src/sanktsionki/dashboard/: app.py
Sanktsionki_project_2026-05-19/src/sanktsionki/dashboard/assets/: style.css
Sanktsionki_project_2026-05-19/src/sanktsionki/scrapers/: __init__.py  avito.py  base.py  cdek_shopping.py  lamoda.py  sneakerhead.py
Sanktsionki_project_2026-05-19/src/sanktsionki/services/: __init__.py  analytics.py  buyers_chat_analytics.py  gooogle_sheets.py  normalization.py  pipelinee.py
Sanktsionki_project_2026-05-19/tests/: test_analyticss.py  test_buyer_chat_analyticss.py  test_google_sheetss.py  test_utilss.py
